SCAL-926: Fixing database example config in production
Previously, there was no db_secret_key config in production at all.

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -1,17 +1,30 @@
 default: &DEFAULT
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  information_service_url: "<%= ENV["INFORMATION_SERVICE_URL"] %>"
-  information_service_user: "<%= ENV["INFORMATION_SERVICE_LOGIN"] %>"
-  information_service_pass: "<%= ENV["INFORMATION_SERVICE_PASSWORD"] %>"
-  #sm_information_service_url: "149.156.9.34:11300"
+  information_service_url: "localhost:11300"
+  secret_key_base: "<you need to change this - with $rake secret>"
+  information_service_user: "<set to custom name describing your Scalarm instance>"
+  information_service_pass: "<generate strong password instead of this>"
+  load_balancer:
+      # if you installed and want to use scalarm custom load balancer set to false
+      disable_registration: true
+      # if you use load balancer you need to specify multicast address (to receive load balancer address)
+      #multicast_address: "224.1.2.3:8000"
+      # if you use load balancer on http you need to specify this
+      #development: true
+      # if you want to run and register service in load balancer on other port than default
+      #port: "20000"
 
 development:
   <<: *DEFAULT
 
 production:
-  <<: *DEFAULT
-
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  information_service_url: "<%= ENV["INFORMATION_SERVICE_URL"] %>"
+  information_service_user: "<%= ENV["INFORMATION_SERVICE_LOGIN"] %>"
+  information_service_pass: "<%= ENV["INFORMATION_SERVICE_PASSWORD"] %>"
+  database:
+    db_name: 'scalarm_db'
+    db_secret_key: "<%= ENV["DB_SECRET_KEY"] %>"  
+  
 test:
   <<: *DEFAULT
-  secret_key_base: test
-
+  secret_key_base: "test"
